Fixed overflow-fade positioning when scrolling.

--- a/src/app/pages/dash/dash.component.scss
+++ b/src/app/pages/dash/dash.component.scss
@@ -4,7 +4,7 @@
 }
 
 .overflow-fade {
-    position: absolute;
+    position: fixed;
     right: 0;
     top: 0;
     height: 100%;
